# yolo_ros

./: how
yolo_bringup/launch/: yolo.launch.py
yolo_msgs/: CMakeLists.txt
yolo_msgs/msg/: DetectionArray.msg
yolo_ros/yolo_ros/: debug_node.py  detect_3d_node.py  tracking_node.py  yolo_node.py
yolov8_bringup/launch/: yolov8_3d.launch.py
yolov8_msgs/: CMakeLists.txt
yolov8_msgs/msg/: Detection.msg  DetectionArray.msg
yolov8_msgs/srv/: ChangeModel.srv
yolov8_ros/: package.xml
yolov8_ros/yolov8_ros/: debug_node.py  detect_3d_node.py  tracking_node.py  yolov8_node.py
